--- a/assets/style/scss/abstracts/_mixins.scss
+++ b/assets/style/scss/abstracts/_mixins.scss
@@ -8,6 +8,7 @@
     border: 1px solid $border-color;
     border-radius: 6px;
     padding: 1rem 1.5rem;
+    box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
 }
 
 @mixin icon($font-size, $padding){
