--- a/assets/style/scss/components/_section-content.scss
+++ b/assets/style/scss/components/_section-content.scss
@@ -1,3 +1,5 @@
+@import '../abstracts/color';
+
 .section--category {
   color: $orange;
   font-size: 16px;
@@ -5,6 +7,7 @@
   font-weight: 400;
   margin-bottom: 15px;
   display: inline-block;
+  text-transform: uppercase;
 }
 .section--heading {
   color: $text-dark;
