--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -5,4 +5,5 @@
 @import "./sections/portfolio";
 @import "./sections/banner";
 @import './sections/videoreel';
-@import '../../layout/navbar'
+@import '../../layout/navbar';
+@import '../home/sections/events'
