--- a/views/home.html
+++ b/views/home.html
@@ -96,7 +96,7 @@
               </div>
               <div class="app__main__hero__content__testimonial">
                 <div class="app__main__hero__content__testimonial__image">
-                  <img src="../assets/images/Bitmap.png" alt="" />
+                  <img style="width: 100%;" src="../assets/images/Bitmap.png" alt="" />
                 </div>
                 <div class="app__main__hero__content__testimonial__body">
                   <div class="app__main__hero__content__testimonial__body__desc">
@@ -117,7 +117,6 @@
             <img style="width: 100%;" src="../assets/images/pic.png" alt="">
           </div>
           <hr />
-          
         </div>
       </div>
     </section>
@@ -249,8 +248,7 @@
                 <h3>Unlock The Greatest Value Possible</h3>
                 <p>Design, business understanding, ability to put themselves in the merchant's shoes meant to partner.</p>
               </article>
-      </section> 
-      
+      </section>   
     <section id="give-new-look">
         <div class="container">
           <div class="row">
@@ -473,6 +471,31 @@
               </div>
           </div>
           
+        </div>
+      </section>
+      <section class="app__main__events">
+        <div class="container">
+            <div class="app__main__events__header">
+                <div class="app__main__events__header__subtitle">
+                    <h3 class="app__main__events__header__subtitle__item">Eventss</h3>
+                </div>
+                <div class="app__main__events__header__title">
+                    <h2 class="app__main__events__header__title__item">
+                        Explore Future Conferences
+                    </h2>
+                </div>
+            </div>
+            <div class="app__main__events__content">
+                <div class="app__main__events__content__items">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="app__main__events__content__items__item">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
       </section>
   </main>
