--- a/views/home.html
+++ b/views/home.html
@@ -477,7 +477,7 @@
         <div class="container">
             <div class="app__main__events__header">
                 <div class="app__main__events__header__subtitle">
-                    <h3 class="app__main__events__header__subtitle__item">Eventss</h3>
+                    <h3 class="app__main__events__header__subtitle__item">Events</h3>
                 </div>
                 <div class="app__main__events__header__title">
                     <h2 class="app__main__events__header__title__item">
@@ -488,12 +488,124 @@
             <div class="app__main__events__content">
                 <div class="app__main__events__content__items">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-4 col-md-12">
                             <div class="app__main__events__content__items__item">
-
+                                <div class="app__main__events__content__items__item__header">
+                                    <div class="app__main__events__content__items__item__header__date">
+                                        <div class="app__main__events__content__items__item__header__date__day">
+                                            <span>3</span>
+                                        </div>
+                                        <div class="app__main__events__content__items__item__header__date__fulldate" >
+                                            <div class="app__main__events__content__items__item__header__date__fulldate__month">
+                                                November
+                                            </div>
+                                            <div class="app__main__events__content__items__item__header__date__fulldate__year">
+                                                2021
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="app__main__events__content__items__item__header__time">
+                                        <i class="fa-solid fa-clock"></i> <span>9:00 am</span><span>-</span><span>3:00 pm</span>
+                                    </div>
+                                    <div class="hr"></div>
+                                </div>
+                                <div class="app__main__events__content__items__item__body">
+                                    <div class="app__main__events__content__items__item__body__title">
+                                        <h3 class="app__main__events__content__items__item__body__title__item">
+                                           Design Weeks
+                                        </h3>
+                                    </div>
+                                    <div class="app__main__events__content__items__item__body__desc">
+                                        <p class="app__main__events__content__items__item__body__desc__item">
+                                            Digital agency is a business you hire to outsource your digital.
+                                        </p>
+                                    </div>
+                                    <div class="app__main__events__content__items__item__body__button">
+                                        <button class="app__main__events__content__items__item__body__button__item">Explore Now</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-md-12">
+                          <div class="app__main__events__content__items__item">
+                              <div class="app__main__events__content__items__item__header">
+                                  <div class="app__main__events__content__items__item__header__date">
+                                      <div class="app__main__events__content__items__item__header__date__day">
+                                          <span>15</span>
+                                      </div>
+                                      <div class="app__main__events__content__items__item__header__date__fulldate" >
+                                          <div class="app__main__events__content__items__item__header__date__fulldate__month">
+                                              November
+                                          </div>
+                                          <div class="app__main__events__content__items__item__header__date__fulldate__year">
+                                              2021
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="app__main__events__content__items__item__header__time">
+                                      <i class="fa-solid fa-clock"></i> <span>9:00 am</span><span>-</span><span>3:00 pm</span>
+                                  </div>
+                                  <div class="hr"></div>
+                              </div>
+                              <div class="app__main__events__content__items__item__body">
+                                  <div class="app__main__events__content__items__item__body__title">
+                                      <h3 class="app__main__events__content__items__item__body__title__item">
+                                         Design Weeks
+                                      </h3>
+                                  </div>
+                                  <div class="app__main__events__content__items__item__body__desc">
+                                      <p class="app__main__events__content__items__item__body__desc__item">
+                                          Digital agency is a business you hire to outsource your digital.
+                                      </p>
+                                  </div>
+                                  <div class="app__main__events__content__items__item__body__button">
+                                      <button class="app__main__events__content__items__item__body__button__item">Explore Now</button>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-4 col-md-12">
+                        <div class="app__main__events__content__items__item">
+                            <div class="app__main__events__content__items__item__header">
+                                <div class="app__main__events__content__items__item__header__date">
+                                    <div class="app__main__events__content__items__item__header__date__day">
+                                        <span>2</span>
+                                    </div>
+                                    <div class="app__main__events__content__items__item__header__date__fulldate" >
+                                        <div class="app__main__events__content__items__item__header__date__fulldate__month">
+                                            December
+                                        </div>
+                                        <div class="app__main__events__content__items__item__header__date__fulldate__year">
+                                            2021
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="app__main__events__content__items__item__header__time">
+                                    <i class="fa-solid fa-clock"></i> <span>9:00 am</span><span>-</span><span>3:00 pm</span>
+                                </div>
+                                <div class="hr"></div>
+                            </div>
+                            <div class="app__main__events__content__items__item__body">
+                                <div class="app__main__events__content__items__item__body__title">
+                                    <h3 class="app__main__events__content__items__item__body__title__item">
+                                       Design Weeks
+                                    </h3>
+                                </div>
+                                <div class="app__main__events__content__items__item__body__desc">
+                                    <p class="app__main__events__content__items__item__body__desc__item">
+                                        Digital agency is a business you hire to outsource your digital.
+                                    </p>
+                                </div>
+                                <div class="app__main__events__content__items__item__body__button">
+                                    <button class="app__main__events__content__items__item__body__button__item">Explore Now</button>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    </div>
+                </div>
+                <div class="app__main__events__content__button">
+                  <button>Explore More</button>
                 </div>
             </div>
         </div>
