--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -9,3 +9,4 @@
 @import './sections/testimonials';
 @import '../home/sections/events';
 @import './sections/services-section';
+@import './sections/faqs';
