--- a/views/home.html
+++ b/views/home.html
@@ -294,26 +294,26 @@
       <div class="container">
         <div class="upper">
           <div class="row">
-          <div class="col-6 col-md-12">
-            <img src="../assets/media/services.png" class="main">
-          </div>
-          <div class="col-6 col-md-12">
-            <div class="text">
-              <span class="section--category">Service</span>
-              <h2 class="section--heading">Making Complex Digital Products</h2>
-              <p class="section--paragraph">
-                Agency provides a full service range including technical skills, design, business.
-              </p>
-              <div class="comment-wrapper">
-                    <img src="../assets/media/jenny.png" alt="">
-                    <div class="comment">
-                      <p>"Understanding, ability to put themselves in the merchant's shoes. It is meant to partner."</p>
-                      <h6>Jenny Murtaugh</h6>
-                </div>
-              </div>
-            <button class="btn--secondary">Explore</button>
+            <div class="col-6 col-md-12">
+              <img src="../assets/media/services.png" class="main">
             </div>
-          </div>
+            <div class="col-6 col-md-12">
+              <div class="text">
+                <span class="section--category">Service</span>
+                <h2 class="section--heading">Making Complex Digital Products</h2>
+                <p class="section--paragraph">
+                  Agency provides a full service range including technical skills, design, business.
+                </p>
+                <div class="comment-wrapper">
+                  <img src="../assets/media/jenny.png" alt="">
+                  <div class="comment">
+                    <p>"Understanding, ability to put themselves in the merchant's shoes. It is meant to partner."</p>
+                    <h6>Jenny Murtaugh</h6>
+                  </div>
+                </div>
+                <button class="btn--secondary">Explore</button>
+              </div>
+            </div>
           </div>
         </div>
         <div class="lower">
@@ -340,7 +340,7 @@
             </div>
           </div>
         </div>
-        
+
       </div>
     </section>
     <section class="app__main__portfolio">
@@ -383,21 +383,13 @@
                   <div class="app__main__portfolio__items__item">
                     <img src="../assets/images/img1.png" alt="" />
                     <div class="app__main__portfolio__items__item__content">
-                      <div
-                        class="app__main__portfolio__items__item__content__category"
-                      >
-                        <p
-                          class="app__main__portfolio__items__item__content__category__item"
-                        >
+                      <div class="app__main__portfolio__items__item__content__category">
+                        <p class="app__main__portfolio__items__item__content__category__item">
                           Design
                         </p>
                       </div>
-                      <div
-                        class="app__main__portfolio__items__item__content__name"
-                      >
-                        <p
-                          class="app__main__portfolio__items__item__content__name__item"
-                        >
+                      <div class="app__main__portfolio__items__item__content__name">
+                        <p class="app__main__portfolio__items__item__content__name__item">
                           Sofa
                         </p>
                       </div>
@@ -408,21 +400,13 @@
                   <div class="app__main__portfolio__items__item">
                     <img src="../assets/images/img3.png" alt="" />
                     <div class="app__main__portfolio__items__item__content">
-                      <div
-                        class="app__main__portfolio__items__item__content__category"
-                      >
-                        <p
-                          class="app__main__portfolio__items__item__content__category__item"
-                        >
+                      <div class="app__main__portfolio__items__item__content__category">
+                        <p class="app__main__portfolio__items__item__content__category__item">
                           Branding
                         </p>
                       </div>
-                      <div
-                        class="app__main__portfolio__items__item__content__name"
-                      >
-                        <p
-                          class="app__main__portfolio__items__item__content__name__item"
-                        >
+                      <div class="app__main__portfolio__items__item__content__name">
+                        <p class="app__main__portfolio__items__item__content__name__item">
                           KeyBoard
                         </p>
                       </div>
@@ -435,21 +419,13 @@
                       <img src="../assets/images/img4.png" alt="" />
                     </div>
                     <div class="app__main__portfolio__items__item__content">
-                      <div
-                        class="app__main__portfolio__items__item__content__category"
-                      >
-                        <p
-                          class="app__main__portfolio__items__item__content__category__item"
-                        >
+                      <div class="app__main__portfolio__items__item__content__category">
+                        <p class="app__main__portfolio__items__item__content__category__item">
                           Illustration
                         </p>
                       </div>
-                      <div
-                        class="app__main__portfolio__items__item__content__name"
-                      >
-                        <p
-                          class="app__main__portfolio__items__item__content__name__item"
-                        >
+                      <div class="app__main__portfolio__items__item__content__name">
+                        <p class="app__main__portfolio__items__item__content__name__item">
                           Work Media
                         </p>
                       </div>
@@ -460,21 +436,13 @@
                   <div class="app__main__portfolio__items__item">
                     <img src="../assets/images/img5.png" alt="" />
                     <div class="app__main__portfolio__items__item__content">
-                      <div
-                        class="app__main__portfolio__items__item__content__category"
-                      >
-                        <p
-                          class="app__main__portfolio__items__item__content__category__item"
-                        >
+                      <div class="app__main__portfolio__items__item__content__category">
+                        <p class="app__main__portfolio__items__item__content__category__item">
                           Motion
                         </p>
                       </div>
-                      <div
-                        class="app__main__portfolio__items__item__content__name"
-                      >
-                        <p
-                          class="app__main__portfolio__items__item__content__name__item"
-                        >
+                      <div class="app__main__portfolio__items__item__content__name">
+                        <p class="app__main__portfolio__items__item__content__name__item">
                           DDDone
                         </p>
                       </div>
@@ -497,9 +465,7 @@
             <div class="col-4 app__main__banner__content__block">
               <div class="app__main__banner__content__block__inner">
                 <div class="app__main__banner__content__block__inner__subtitle">
-                  <p
-                    class="app__main__banner__content__block__inner__subtitle__item"
-                  >
+                  <p class="app__main__banner__content__block__inner__subtitle__item">
                     GET STARTED
                   </p>
                 </div>
@@ -631,6 +597,54 @@
         <div class="row testimonials-button">
           <div class="col-12">
             <button class="btn--secondary">See All</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="faqs">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-md-12 faqs-content">
+            <span class="section--category">FAQ</span>
+            <h3 class="section--heading">Frequently Asked Questions</h3>
+            <p>A digital agency is a business you hire to outsource your digital marketing efforts, instead of handling
+              in-house.</p>
+            <span>Contact Us</span>
+          </div>
+          <div class="col-6 col-md-12">
+            <div class="faqs-accordion">
+              <div class="faqs-accordion__item">
+                <div class="faqs-accordion__item__content active-accordion">
+                  <div class="row">
+                    <h4 class="accordion--title">A digital agency is a business</h4>
+                    <i class="fa-solid fa-caret-up"></i>
+                  </div>
+                  <p>Digital marketing efforts, instead of handling in-house. They can provide your business with a
+                    variety
+                    of digital solutions to promote your product or service online and help you hit your marketing goals
+                    and
+                    grow your business.</p>
+                </div>
+              </div>
+              <div class="faqs-accordion__item">
+                <div class="faqs-accordion__item__title">
+                  <h4 class="accordion--title">Hire to outsource your digital</h4>
+                  <i class="fa-solid fa-caret-down"></i>
+                </div>
+              </div>
+              <div class="faqs-accordion__item">
+                <div class="faqs-accordion__item__title">
+                  <h4 class="accordion--title">Marketing efforts</h4>
+                  <i class="fa-solid fa-caret-down"></i>
+                </div>
+              </div>
+              <div class="faqs-accordion__item">
+                <div class="faqs-accordion__item__title last-accordion">
+                  <h4 class="accordion--title">Can provide your business</h4>
+                  <i class="fa-solid fa-caret-down"></i>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
