--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -71,7 +71,8 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   color: #391400;
   border: 1px solid white;
   border-radius: 6px;
-  padding: 1rem 1.5rem; }
+  padding: 1rem 1.5rem;
+  box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08); }
 
 .icon--small {
   background-color: #EF6D58;
@@ -105,7 +106,7 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   padding-right: 15%; }
 
 .section--paragraph {
-  color: #391400 !important;
+  color: rgba(57, 20, 0, 0.64) !important;
   font-weight: 400 !important;
   font-size: 14.5px !important;
   line-height: 32px !important;
@@ -810,7 +811,7 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
     #app__main__videoreel .videoreel--content__wrapper article p {
       font-size: 16px;
       line-height: 32px;
-      color: #391400; }
+      color: rgba(57, 20, 0, 0.64); }
 
 .app__header {
   width: 100%;
@@ -908,6 +909,9 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   #service .lower h2 {
     padding-right: 60%;
     margin-bottom: 7%; }
+    @media (max-width: 992px) {
+      #service .lower h2 {
+        padding: 0; } }
   #service .lower .boxes {
     display: flex;
     flex-wrap: wrap; }
@@ -946,3 +950,81 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       border-radius: 6px 0px 0px 6px; }
     #service .lower .boxes .box:last-child {
       border-radius: 0px 6px 6px 0px; }
+
+#pricing {
+  background-color: #FDF0E9;
+  padding-bottom: 10%; }
+  #pricing h2 {
+    padding-right: 70%;
+    margin-bottom: 2%; }
+    @media (max-width: 992px) {
+      #pricing h2 {
+        padding: 0; } }
+  #pricing .boxes {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end; }
+    #pricing .boxes .box {
+      width: 33.33%;
+      overflow: hidden;
+      border: 1px solid #F3D1BF;
+      border-radius: 6px 6px 0px 0px;
+      padding: 3% 4%; }
+      @media (max-width: 992px) {
+        #pricing .boxes .box {
+          width: 100%; } }
+      #pricing .boxes .box h4 {
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 48px;
+        color: #391400;
+        margin-bottom: 2%; }
+      #pricing .boxes .box p {
+        padding-right: 13%;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 30px;
+        color: rgba(57, 20, 0, 0.64);
+        margin-bottom: 10%; }
+      #pricing .boxes .box ul li {
+        vertical-align: middle;
+        margin-bottom: 10%; }
+      #pricing .boxes .box ul i {
+        background-color: #EF6D58;
+        font-size: 7px;
+        color: white;
+        padding: 5px;
+        border-radius: 50%; }
+      #pricing .boxes .box ul .fa-minus {
+        background-color: #f6daca; }
+      #pricing .boxes .box span {
+        display: block; }
+      #pricing .boxes .box .badge {
+        display: inline-block;
+        color: white;
+        font-size: 13px;
+        padding: 3%;
+        text-align: center;
+        background-color: #ed8575;
+        border-radius: 19px;
+        vertical-align: middle;
+        position: absolute;
+        top: 3%;
+        left: 9%; }
+        @media (max-width: 992px) {
+          #pricing .boxes .box .badge {
+            left: 2%; } }
+      #pricing .boxes .box button {
+        margin-top: 4%; }
+    #pricing .boxes .active {
+      background-color: white;
+      align-self: baseline;
+      position: relative;
+      padding-top: 6%; }
+      @media (max-width: 992px) {
+        #pricing .boxes .active {
+          padding-top: 20%; } }
+  #pricing .boxes .box:first-child {
+    border-radius: 6px 0px 0px 6px; }
+  #pricing .boxes .box:last-child {
+    border-radius: 0px 6px 6px 0px; }
