--- a/assets/style/scss/abstracts/_color.scss
+++ b/assets/style/scss/abstracts/_color.scss
@@ -2,6 +2,6 @@ $orange: #ed8575;
 $icon-bgc: #EF6D58;
 $icon-bgc-hover: #c05342;
 $text-dark: #391400;
-$text-dark-grey: #391400;
+$text-dark-grey: rgba(57, 20, 0, 0.64);
 $section-bgc: #FDF0E9;
 $hr-bgc: #F3D1BF;
