--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -6,4 +6,5 @@
 @import "./sections/banner";
 @import './sections/videoreel';
 @import '../../layout/navbar';
-@import './sections/services-section'
+@import './sections/services-section';
+@import './sections/pricing-section';
