--- a/views/home.html
+++ b/views/home.html
@@ -528,6 +528,49 @@
           
         </div>
       </section>
+
+      <section id="pricing">
+        <div class="container">
+          <span class="section--category">Pricing</span>
+          <h2 class="section--heading">Check Our Pricing Plans</h2>
+          <div class="boxes">
+            <div class="box">
+              <span class="section--category">Consultation</span>
+              <h4>Free</h4>
+              <p>Your digital marketing efforts, instead of handling in-house.</p>
+              <ul>
+                <li><i class="fa-solid fa-plus"></i> Brand Design</li>
+                <li><i class="fa-solid fa-minus"></i> Market Analysis</li>
+                <li><i class="fa-solid fa-minus"></i> Production</li>
+              </ul>
+              <button class="btn--secondary">Contact Us</button>
+            </div>
+            <div class="box active">
+              <span class="badge">Popular</span>
+              <span class="section--category">Design</span>
+              <h4>$1500</h4>
+              <p>Provide your business with a variety of digital solutions to promote.</p>
+              <ul>
+                <li><i class="fa-solid fa-plus"></i> Brand Design</li>
+                <li><i class="fa-solid fa-plus"></i> Market Analysis</li>
+                <li><i class="fa-solid fa-minus"></i> Production</li>
+              </ul>
+              <button class="btn--primary">Contact Us</button>
+            </div>
+            <div class="box">
+              <span class="section--category">Design+Code</span>
+              <h4>$2900</h4>
+              <p>Help you hit your marketing goals and grow your business.</p>
+              <ul>
+                <li><i class="fa-solid fa-plus"></i> Brand Design</li>
+                <li><i class="fa-solid fa-plus"></i> Market Analysis</li>
+                <li><i class="fa-solid fa-plus"></i> Production</li>
+              </ul>
+              <button class="btn--secondary">Contact Us</button>
+            </div>
+          </div>
+        </div>
+      </section>
   </main>
   <footer class="footer">
     <div class="container">
