--- a/views/home.html
+++ b/views/home.html
@@ -635,8 +635,102 @@
 
       </div>
     </section>
-    
-    
+    <section class="app__main__team">
+      <div class="container">
+        <div class="app__main__team__header">
+          <div class="app__main__team__header__subtitle">
+            <p class="app__main__team__header__subtitle__item">
+              Our Team
+            </p>
+          </div>
+          <div class="app__main__team__header__title">
+            <div class="app__main__team__header__title__item">
+              Team of Designers and Developers
+            </div>
+            <div class="app__main__team__header__title__icons">
+              <div class="app__main__team__header__title__icons__icon">
+                <i class="fa-solid fa-arrow-left"></i>
+              </div>
+              <div class="app__main__team__header__title__icons__icon">
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+  
+        </div>
+        <div class="app__main__team__body">
+    <div class="app__main__team__body__items">
+    <div class="row">
+      <div class="col-3 col-md-12">
+        <div class="app__main__team__body__items__item">
+          <div class="app__main__team__body__items__item__image">
+            <img src="../assets/images/team2.png" alt="">
+          </div>
+          <div class="app__main__team__body__items__item__body">
+            <div class="app__main__team__body__items__item__body__name">
+              <p>Azah Anyeni</p>
+            </div>
+            <div class="app__main__team__body__items__item__body__position">
+              <p>Designer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3 col-md-12">
+        <div class="app__main__team__body__items__item">
+          <div class="app__main__team__body__items__item__image">
+            <img src="../assets/images/team3.png" alt="">
+          </div>
+          <div class="app__main__team__body__items__item__body">
+            <div class="app__main__team__body__items__item__body__name">
+              <p>Azah Anyeni</p>
+            </div>
+            <div class="app__main__team__body__items__item__body__position">
+              <p>Designer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3 col-md-12">
+        <div class="app__main__team__body__items__item">
+          <div class="app__main__team__body__items__item__image">
+            <img src="../assets/images/team4.png" alt="">
+          </div>
+          <div class="app__main__team__body__items__item__body">
+            <div class="app__main__team__body__items__item__body__name">
+              <p>Azah Anyeni</p>
+            </div>
+            <div class="app__main__team__body__items__item__body__position">
+              <p>Designer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3 col-md-12">
+        <div class="app__main__team__body__items__item">
+          <div class="app__main__team__body__items__item__image">
+            <img src="../assets/images/team1.png" alt="">
+          </div>
+          <div class="app__main__team__body__items__item__body">
+            <div class="app__main__team__body__items__item__body__name">
+              <p>Azah Anyeni</p>
+            </div>
+            <div class="app__main__team__body__items__item__body__position">
+              <p>Designer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+        </div>
+        <div class="app__main__team__dots">
+          <div class="app__main__team__dots__item active"></div>
+          <div class="app__main__team__dots__item"></div>
+          <div class="app__main__team__dots__item"></div>
+        </div>
+      </div>
+    </section>
     <section id="app__main__testimonials">
       <div class="container">
         <div class="row">
