--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -1,15 +1,16 @@
-@import './sections/experience-design-agency';
-@import './sections/give-new-look';
-@import './sections/hero', './sections/experience-design-agency';
-@import './sections/features';
+@import "./sections/experience-design-agency";
+@import "./sections/give-new-look";
+@import "./sections/hero", "./sections/experience-design-agency";
+@import "./sections/features";
 @import "./sections/portfolio";
 @import "./sections/banner";
-@import './sections/videoreel';
-@import '../../layout/navbar';
-@import '../home/sections/events';
-@import './sections/services-section';
-@import './sections/services-section';
-@import './sections/pricing-section';
-@import './sections/testimonials';
-@import '../home/sections/events';
-@import './sections/faqs';
+@import "./sections/videoreel";
+@import "../../layout/navbar";
+@import "../home/sections/events";
+@import "./sections/services-section";
+@import "./sections/services-section";
+@import "./sections/pricing-section";
+@import "./sections/testimonials";
+@import "../home/sections/events";
+@import "./sections/faqs";
+@import "./sections/team";
