--- a/views/home.html
+++ b/views/home.html
@@ -731,6 +731,7 @@
         </div>
       </div>
     </section>
+    <section class="app__main"></section>
     <section id="app__main__testimonials">
       <div class="container">
         <div class="row">
