--- a/views/home.html
+++ b/views/home.html
@@ -731,7 +731,40 @@
         </div>
       </div>
     </section>
-    <section class="app__main"></section>
+    <section class="app__main__founder">
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-md-12">
+            <div class="app__main__founder__image">
+            <img src="../assets/images/founder.png" alt="">
+
+            </div>
+          </div>
+          <div class="col-6 col-md-12">
+            <div class="app__main__founder__content">
+              <div class="app__main___founder__content__subtitle">
+                <div class="app__main__founder__content__subtitle__item">
+                  Founder Words
+                </div>
+              </div>
+              <div class="app__main__founder__content__title">
+                <h4 class="app__main__founder__content__title__item">
+                  Digital agency is a business you hire to outsource your digital marketing efforts
+                </h4>
+              </div>
+              <div class="app__main__founder__content__name">
+                <p class="app__main__founder__content__name__item">Ren Delan</p>
+              </div>
+              <div class="app__main__founder__content__position">
+                <p class="app__main__founder__content__position__item">
+                  Founder
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="app__main__testimonials">
       <div class="container">
         <div class="row">
