--- a/assets/style/scss/pages/home/sections/_team.scss
+++ b/assets/style/scss/pages/home/sections/_team.scss
@@ -33,10 +33,17 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          border: solid;
+          cursor: pointer;
+          border: 1px solid #4E4F6E;
+          color: #4E4F6E;
           border-radius: 50%;
           width: 48px;
           height: 48px;
+          transition: 0.3s linear;
+          &:hover{
+            color: lightgrey;
+            border: 1px solid lightgrey;
+          }
         }
       }
     }
